monitoring/loki/ingres.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loki-ingress
  namespace: monitoring
  annotations:
    #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - monitoring.oyintest.com
    secretName: mine-tls
  rules:
  - host: monitoring.oyintest.com
    http:
      paths:
      - path: /prom/
        pathType: Exact
        backend:
          service:
            name: my-prometheus-server
            port:
              number: 80
